new feature added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <p>this is a new repo.</p>
 
-<P>this is new para in main branch</P>
+<p>this is new para in main branch</p>
+
+<h2>this changes is on feature1 branch</h2>
